--- a/index.html
+++ b/index.html
@@ -147,10 +147,21 @@
         </div>
         <div class="badge"> Synth · Poly</div>
       </div>
+
+<div class="card">
+        <div class="card-title">
+          <a href="./plugins/Brodhes/">Vibes chords synth</a>
+        </div>
+        <div class="card-desc">
+          Synthesizer with a chords sequencer. Polyphonic.
+        </div>
+        <div class="badge"> Synth · Poly</div>
+      </div>
       
     </div>
   </div>
 </body>
 </html>
+
 
 
