--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <div class="card">
         <div class="card-title">
-          <a href="./plugins/Brodher/">Vibes chords synth</a>
+          <a href="./plugins/Brhoder/">Vibes chords synth</a>
         </div>
         <div class="card-desc">
           Synthesizer with a chords sequencer. Polyphonic.
@@ -162,6 +162,7 @@
   </div>
 </body>
 </html>
+
 
 
 
